# LinAlgKit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPANSION_PLAN.md  FUTURE_UPDATES.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml
benchmarks/: benchmark_matrix.cpp
data/benchmarks/: results-20251224-080503.csv  results-20251225-032136.csv  results-20251226-031927.csv  results-20251227-031809.csv  results-20251228-034155.csv  results-20251229-034249.csv  results-20251230-032246.csv  results-20251231-032134.csv  results-20260101-034426.csv  results-20260102-032457.csv  results-20260103-031725.csv  results-20260104-034445.csv  results-20260105-034910.csv  results-20260106-032355.csv  results-20260107-032343.csv  results-20260108-032404.csv  results-20260109-032443.csv  results-20260110-031859.csv  results-20260111-034404.csv  results-20260112-034319.csv  results-20260113-032251.csv  results-20260114-034135.csv  results-20260115-032510.csv  results-20260116-032418.csv  results-20260117-031742.csv  results-20260118-034006.csv  results-20260119-034409.csv  results-20260120-032816.csv  results-20260121-032748.csv  results-20260122-034138.csv  results-20260123-032726.csv  results-20260124-032136.csv  results-20260125-034755.csv  results-20260126-035055.csv  results-20260127-034153.csv  results-20260128-032951.csv  results-20260129-040150.csv
docs/: api.md  autograd.md  deep_learning.md  index.md  performance.md  releases.md  releasing.md  tutorial.md
examples/: example_main.cpp
include/: matrixlib.h  matrixlib_impl.h
python/: pybind_module.cpp
python_pkg/LinAlgKit/: __init__.py  autograd.py  fast.py  pylib.py  tensor.py
python_pkg/LinAlgKit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_pkg/LinAlgKit/__pycache__/: fast._elu_jit-60.py310.1.nbc  fast._elu_jit-60.py310.nbi  fast._gelu_jit-69.py310.1.nbc  fast._gelu_jit-69.py310.nbi  fast._leaky_relu_jit-51.py310.1.nbc  fast._leaky_relu_jit-51.py310.nbi  fast._mae_loss_jit-132.py310.1.nbc  fast._mae_loss_jit-132.py310.nbi  fast._mse_loss_jit-122.py310.1.nbc  fast._mse_loss_jit-122.py310.nbi  fast._relu_jit-42.py310.1.nbc  fast._relu_jit-42.py310.nbi  fast._sigmoid_jit-29.py310.1.nbc  fast._sigmoid_jit-29.py310.nbi  fast._softplus_jit-102.py310.1.nbc  fast._softplus_jit-102.py310.nbi  fast._swish_jit-79.py310.1.nbc  fast._swish_jit-79.py310.nbi  fast._tanh_jit-94.py310.1.nbc  fast._tanh_jit-94.py310.nbi
python_pkg/LinAlgKit/nn/: __init__.py  layers.py  module.py
python_pkg/LinAlgKit/optim/: __init__.py  optimizers.py
scripts/: benchmark_fast.py  run_benchmarks.py
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/autograd/: index.html
site/deep_learning/: index.html
site/performance/: index.html
site/releases/: index.html
site/releasing/: index.html
site/search/: search_index.json
site/tutorial/: index.html
src/: matrixlib.cpp
test_cmake/: CMakeLists.txt
tests/: test_autograd.py  test_basic.py  test_deep_learning.py  test_matrix.cpp  test_phase1.py
