[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "LinAlgKit"
version = "0.1.0"
description = "A C++/Python linear algebra toolkit with pybind11 bindings"
readme = "README.md"
authors = [{ name = "LinAlgKit Developers" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.22",
]

[project.urls]
Homepage = "https://github.com/SciComputeOrg/LinAlgKit"
Repository = "https://github.com/SciComputeOrg/LinAlgKit"

[tool.setuptools]
package-dir = {"" = "python_pkg"}

[tool.setuptools.packages.find]
where = ["python_pkg"]
