[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "LinAlgKit"
version = "0.2.1"
description = "A lightweight, NumPy-powered linear algebra toolkit for Python with a clean matrix API"
readme = "README.md"
authors = [{ name = "LinAlgKit Developers" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["linear-algebra", "matrix", "numpy", "scientific-computing", "math"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.22",
]

[project.urls]
Homepage = "https://github.com/SciComputeOrg/LinAlgKit"
Repository = "https://github.com/SciComputeOrg/LinAlgKit"
Documentation = "https://github.com/SciComputeOrg/LinAlgKit#readme"

[tool.setuptools]
package-dir = {"" = "python_pkg"}

[tool.setuptools.packages.find]
where = ["python_pkg"]
